--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,9 @@
     <string name="inicia_sesi_n_con_correo">Inicia sesión con correo</string>
     <string name="inicia_sesi_n_con_google">Inicia sesión con Google</string>
     <string name="todo">TODO</string>
+    <string name="design_tutorial_mp4">Design Tutorial.mp4</string>
+    <string name="todo">TODO</string>
+    <string name="size">Size</string>
+    <string name="duration">Duration</string>
+    <string name="todo">TODO</string>
 </resources>
